[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/delete_icon.png" type="Texture" id=1]
[ext_resource path="res://gui/GameEntry.gd" type="Script" id=2]

[node name="GameEntry" type="HSplitContainer"]
margin_right = 212.0
margin_bottom = 23.0
split_offset = 200
dragger_visibility = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="."]
margin_top = 6.0
margin_right = 134.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 134.0
margin_right = 212.0
margin_bottom = 26.0
custom_constants/separation = 7

[node name="ConfirmDelete" type="Button" parent="HBoxContainer"]
visible = false
margin_right = 61.0
margin_bottom = 23.0
text = "confirm"

[node name="CancelDelete" type="Button" parent="HBoxContainer"]
visible = false
margin_left = 68.0
margin_right = 121.0
margin_bottom = 23.0
text = "cancel"

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 26.0
icon = ExtResource( 1 )

[node name="LoadButton" type="Button" parent="HBoxContainer"]
margin_left = 39.0
margin_right = 78.0
margin_bottom = 26.0
text = "load"
